# My-VIM

./: CMakeLists.txt
src/: main.cpp
src/Controller/: EditorController.cpp  EditorController.h
src/Model/: Document.h  EditorApp.cpp  EditorApp.h
src/Utils/: FileIO.h  MyString.cpp  MyString.h
src/View/: EditorView.cpp  EditorView.h  NcursesWrapper.cpp  NcursesWrapper.h
